--- a/index.html
+++ b/index.html
@@ -4,14 +4,11 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<link rel="stylesheet" href = "css/bootstrap.min.css"/>
 		<link rel = "stylesheet" href = "css/style.css"/>
-		<title>Bootstrap Trying</title>
+		<title>Pokemon - Homepage</title>
 	</head>
 	<body>
 			<div class="navbar-static-top navbar-inverse">
 				<div class="container">
-					<div class="navbar-brand">
-						Homepage
-					</div>
 					<button class="navbar-toggle" data-toggle="collapse" data-target =".navHeaderCollapse">
 						Menu
 					</button>
@@ -19,7 +16,7 @@
 						<ul class="nav navbar-nav navbar-right">
 							<li><a href="index.html">Home Page</a></li>
 							<li><a href="pokemon.html">Pokemon</a></li>
-							<li><a href="characters.html">Characters</a></li>
+							<li><a href="characters.html">Characters and Region</a></li>
 							<li><a href="info.html">Special Info</a></li>
 						</ul>
 					</div>
@@ -34,24 +31,47 @@
 				<div class="container">
 					<div class="row">
 						<div class="col-md-4">
-							<h2 class="text-center">Heading</h2>
-							<p class="text-justify">The seventh generation of Pokemon fast approaches!</p>
-							<a href="#" class="btn btn-default">Sun/Moon Reveal</a>
+							<h2 class="text-center">Greetings!</h2>
+							<p class="text-justify">Welcome to the Alolan Region <span id="name">Trainer</span>! Use this site to take the first step to becoming a pokemon master today!</p>
+							<a class="btn btn-default" onclick="changeName()">Change name here!</a>
 						</div>
 						
 						<div class="col-md-4">
-							<h2 class="text-center">Heading</h2>
-							<p class="text-justify">The seventh generation of Pokemon fast approaches!</p>
-							<a href="#" class="btn btn-default">Sun/Moon Reveal</a>
+							<h2 class="text-center">Gameplay</h2>
+							<p class="text-justify">Here you can see for yourself the initial revelation of the new Pokemon Sun and Pokemon moon versions and the legacy of games that brought us to this point!</p>
+							<a href="https://www.youtube.com/watch?v=hmzDL1l3Fag&t=21s" target="_blank" class="btn btn-default">Sun/Moon Reveal</a>
 						</div>
 						
 						<div class="col-md-4">
-							<h2 class="text-center">Heading</h2>
-							<p class="text-justify">The seventh generation of Pokemon fast approaches!</p>
-							<a href="#" class="btn btn-default">Sun/Moon Reveal</a>
+							<h2 class="text-center">Z-Moves + Alolan Forms</h2>
+							<p class="text-justify">New and old pokemon wait in for you in the wild areas of the Alola region! Z-Moves are a new type of move in which the Trainer and Pokémon's wishes combine to release their full power.</p>
+							<a href="https://www.youtube.com/watch?v=3AZHowhxM0U" target="_blank" class="btn btn-default">Z-Moves Reveal</a>
 						</div>
 					</div>
 				</div>
+			</div>
+			<div class="alt2">
+				<div class="col-md-2 padding">
+				</div>
+				<div class="col-md-8 padding">
+					<div class="padding images">
+						<h1>Pokemon Sun and Moon have Arrived!</p>
+						<img src="images/cover.jpg" height="375px" width="700px">
+					</div>
+					<h1></h1>
+					<p>Celebrating the 20th anniversary of the original Pokemon games, Pokemon Red and Pokemon Green, come the two new titles in the series, Pokemon Sun and Moon available on the Nintendo 3DS!</p>
+					<h2>New forms</h2>
+					<p>Pokémon Sun and Moon are the first core series games where players can use Zygarde's 10% and Complete Formes, as well as Greninja's Ash-Greninja form. Zygarde's other forms, Zygarde Cell and Core, also make non-playable appearances.</p>
+					<h2>Alolan Forms</h2>
+					<p>Some Pokémon species have uniquely adapted to the microclimates of the Alola region, becoming what is known as a regional variant of their species. These variant species take on different forms from those of their species in other regions, including a different appearance, Abilities, and more. An Alolan variant of a species is known as its Alola Form.</p>
+					<h2>Z-Moves</h2>
+					<p>The island challenge is a new mechanic introduced in Pokémon Sun and Moon. It is a rite in which players travel through the four islands of Alola with the goal of becoming the strongest Trainer, known as the island challenge champion. In order to complete the island challenge, players must overcome each island's unique trials which may include, but are not limited to, finding items, completing tests of knowledge, and battling with Pokémon.</p>
+				</div>
+				<div class="col-md-2 padding">
+				</div>
+			</div>
+			<div class="alt3">
+				<footer>&copy; Gerard Smyth <br/> <a href="#">Back to Top</footer>
 			</div>
 			<script 
 					src="https://code.jquery.com/jquery-3.1.1.js"
@@ -59,6 +79,33 @@
 					crossorigin="anonymous">
 			</script>
 			<script src="js/bootstrap.js"></script>
+			<script>
+				function changeName(){
+					var name=prompt("Please enter your name here:");
+					var user=document.getElementById("name");
+					user.innerHTML=name;
+				}
+				// Scroll to specific values
+				// scrollTo is the same
+				window.scroll({
+				  top: 2500, 
+				  left: 0, 
+				  behavior: 'smooth' 
+				});
+
+				// Scroll certain amounts from current position 
+				window.scrollBy({ 
+				  top: 100, // could be negative value
+				  left: 0, 
+				  behavior: 'smooth' 
+				});
+
+				// Scroll to a certain element
+				document.querySelector('.hello').scrollIntoView({ 
+				  behavior: 'smooth' 
+				});
+			</script>
+		
 		
 	</body>
 </html>
