--- a/info.html
+++ b/info.html
@@ -7,24 +7,16 @@
 		<title>Pokemon - Trainer Information</title>
 	</head>
 	<body>
-			<script 
-					src="https://code.jquery.com/jquery-3.1.1.js"
-					integrity="sha256-16cdPddA6VdVInumRGo6IbivbERE8p7CQR3HzTBuELA="
-					crossorigin="anonymous">
-			</script>
 			<div class="navbar-static-top navbar-inverse">
 				<div class="container">
-					<div class="navbar-brand">
-						Homepage
-					</div>
 					<button class="navbar-toggle" data-toggle="collapse" data-target =".navHeaderCollapse">
 						Menu
 					</button>
-					<div class = "collapse navbar-collapse navbar-collapse navHeaderCollapse">
+					<div class = "collapse navbar-collapse navbar-collapse navHeaderCollapse" id="#top">
 						<ul class="nav navbar-nav navbar-right">
 							<li><a href="index.html">Home Page</a></li>
 							<li><a href="pokemon.html">Pokemon</a></li>
-							<li><a href="characters.html">Characters</a></li>
+							<li><a href="characters.html">Characters and Region</a></li>
 							<li><a href="info.html">Special Info</a></li>
 						</ul>
 					</div>
@@ -35,32 +27,11 @@
 					<img src="images/logo.png" height="200px" width="500px">
 				</div>
 			</div>
-			<div class="alt1">
-				<div class="container">
-					<div class="row">
-						<div class="col-md-4">
-							<h2 class="text-center">Heading</h2>
-							<p class="text-justify">The seventh generation of Pokemon fast approaches!</p>
-							<a href="https://www.youtube.com/watch?v=hmzDL1l3Fag" target="_blank" class="btn btn-default">Sun/Moon Reveal</a>
-						</div>
-						
-						<div class="col-md-4">
-							<h2 class="text-center">Type finder</h2>
-							<p class="text-justify">Find the type you're looking for!</p>
-							<a href="#" class="btn btn-default">Sun/Moon Reveal</a>
-						</div>
-						
-						<div class="col-md-4">
-							<h2 class="text-center">Heading</h2>
-							<p class="text-justify">The seventh generation of Pokemon fast approaches!</p>
-							<a href="#" class="btn btn-default">Sun/Moon Reveal</a>
-						</div>
-					</div>
-				</div>
-			</div>
 			<div class="alt2">
 				<div class="container padding">
 					<div class="col-md-12">
+						<h1>Pokemon Types</h1>
+						<p>Listed here are all the types of pokemon, their strengths and their weaknesses!</p>
 						<table style="width:100%">
 						  <tr>
 							<th>Type</th>
@@ -77,12 +48,121 @@
 							<td>Water</td> 
 							<td>Fire</td>
 						  </tr>
+						  <tr>
+							<td>Fire</td>
+							<td>Grass</td> 
+							<td>Water</td>
+						  </tr>
+						  <tr>
+							<td>Water</td>
+							<td>Fire</td> 
+							<td>Grass</td>
+						  </tr>
+						  <tr>
+							<td>Bug</td>
+							<td>Psychic</td> 
+							<td>Flying</td>
+						  </tr>
+						  <tr>
+							<td>Flying</td>
+							<td>Bug</td> 
+							<td>Electric</td>
+						  </tr>
+						  <tr>
+							<td>Electric</td>
+							<td>Flying</td> 
+							<td>Ground</td>
+						  </tr>
+						  <tr>
+							<td>Ground</td>
+							<td>Electric</td> 
+							<td>Water</td>
+						  </tr>
+						  <tr>
+							<td>Rock</td>
+							<td>Ice</td> 
+							<td>Grass</td>
+						  </tr>
+						  <tr>
+							<td>Ice</td>
+							<td>Dragon</td> 
+							<td>Fighting</td>
+						  </tr>
+						  <tr>
+							<td>Fighting</td>
+							<td>Dark</td> 
+							<td>Psychic</td>
+						  </tr>
+						  <tr>
+							<td>Psychic</td>
+							<td>Poison</td> 
+							<td>Ghost</td>
+						  </tr>
+						  <tr>
+							<td>Ghost</td>
+							<td>Psychic</td> 
+							<td>Dark</td>
+						  </tr>
+						  <tr>
+							<td>Dark</td>
+							<td>Ghost</td> 
+							<td>Fighting</td>
+						  </tr>
+						  <tr>
+							<td>Dragon</td>
+							<td>Dragon</td> 
+							<td>Fairy</td>
+						  </tr>
+						  <tr>
+							<td>Fairy</td>
+							<td>Dragon</td> 
+							<td>Steel</td>
+						  </tr>
+						  <tr>
+							<td>Steel</td>
+							<td>Poison - N/A</td> 
+							<td>Fire</td>
+						  </tr>
+						  <tr>
+							<td>Poison</td>
+							<td>Grass</td> 
+							<td>Psychic</td>
+						  </tr>
 						</table>
 					</div>
 				</div>
 			</div>
-			
+			<div class="alt3">
+				<footer>&copy; Gerard Smyth <br/> <a href="#top">Back to Top</footer>
+			</div>
+			<script 
+					src="https://code.jquery.com/jquery-3.1.1.js"
+					integrity="sha256-16cdPddA6VdVInumRGo6IbivbERE8p7CQR3HzTBuELA="
+					crossorigin="anonymous">
+			</script>
 			<script src="js/bootstrap.js"></script>
+			<script>
+				// Scroll to specific values
+				// scrollTo is the same
+				window.scroll({
+				  top: 2500, 
+				  left: 0, 
+				  behavior: 'smooth' 
+				});
+
+				// Scroll certain amounts from current position 
+				window.scrollBy({ 
+				  top: 100, // could be negative value
+				  left: 0, 
+				  behavior: 'smooth' 
+				});
+
+				// Scroll to a certain element
+				document.querySelector('.hello').scrollIntoView({ 
+				  behavior: 'smooth' 
+				});
+			</script>
+		
 		
 	</body>
 </html>
